--- a/package.json
+++ b/package.json
@@ -139,11 +139,13 @@
     "markdown-it-ins": "^2.0.0",
     "markdown-it-katex": "^2.0.3",
     "markdown-it-sub": "^1.0.0",
+    "mini-css-extract-plugin": "^0.6.0",
     "minimist": "^1.2.0",
     "ml-pca": "^2.1.0",
     "moment": "2.24.0",
     "murmurhash3js": "^3.0.1",
     "node-libs-browser": "^2.2.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "pdfjs-dist": "^2.1.266",
     "pdfmake": "^0.1.54",
     "plotly.js": "^1.45.3",
