--- a/package.json
+++ b/package.json
@@ -130,6 +130,7 @@
     "html-webpack-plugin": "^3.2.0",
     "is-touch-device": "^1.0.1",
     "js-yaml": "^3.13.0",
+    "json-markup": "^1.1.3",
     "katex": "^0.10.1",
     "localforage": "^1.7.2",
     "lodash.debounce": "^4.0.8",
