--- a/package.json
+++ b/package.json
@@ -142,7 +142,7 @@
     "markdown-it-sub": "^1.0.0",
     "mini-css-extract-plugin": "^0.6.0",
     "minimist": "^1.2.0",
-    "ml-pca": "^2.1.0",
+    "ml-pca": "2.1.0",
     "moment": "2.24.0",
     "murmurhash3js": "^3.0.1",
     "node-libs-browser": "^2.2.0",
@@ -215,7 +215,7 @@
     "concurrently": "^4.0.0",
     "del": "^4.1.0",
     "doctrine": "^3.0.0",
-    "electron": "4.1.3",
+    "electron": "5.0.0",
     "electron-packager": "13.1.1",
     "enzyme": "3.9.0",
     "enzyme-adapter-react-16": "^1.11.2",
